@@ -35,6 +35,7 @@ suite = unittest.TestLoader().loadTestsFromNames(
      'tests.test_rfc3770.suite',
      'tests.test_rfc3779.suite',
      'tests.test_rfc3852.suite',
+     'tests.test_rfc4043.suite',
      'tests.test_rfc4055.suite',
      'tests.test_rfc4073.suite',
      'tests.test_rfc4108.suite',
@@ -81,6 +82,7 @@ suite = unittest.TestLoader().loadTestsFromNames(
      'tests.test_rfc7292.suite',
      'tests.test_rfc7296.suite',
      'tests.test_rfc7508.suite',
+     'tests.test_rfc7585.suite',
      'tests.test_rfc7633.suite',
      'tests.test_rfc7773.suite',
      'tests.test_rfc7894.suite',
